--- a/config.json
+++ b/config.json
@@ -1,38 +1,43 @@
 {
-    "NICE"         : "19",
-    "RCODE"        : ".read",
-    "directional"  : true,
-    "NUMTHREADS"   : "2",
-    "INEXT"  : ".fastq.gz",
-    "SAMPLES": {
-	 "lung":{
-         	"name":"lung",
-         	"files": ["lung_SRX388734"]
-	  }, 
-         "aorta":{
-                "name":"aorta",
-                "files": ["aorta_SRX263882"]
-          },	
-         "placenta":{
-                "name":"placenta",
-                "files": ["placenta_SRX323156.read1", "placenta_SRX323156.read2"]
-          }	
+    "GENOMEPATH": "/scratch/AG_Akalin/Base/Genomes/hg19/",
+    "GENOME_VERSION": "hg19",
+    "GTOOLBOX": "/home/bosberg/.guix-profile/bin/",
+    "NICE": "5",
+    "PATHIN": "/scratch/AG_Akalin/bosberg/pre_SM_fullfqfiles_in/",
+    "PATHOUT": "/scratch/AG_Akalin/bosberg/post_SM_adipose_immortal_out/",
+    "PROGS": {
+        "BISMARK": "bismark",
+        "BISMARK2REPORT": "bismark2report",
+        "BISMARK_GENOME_PREPARATION": "bismark_genome_preparation",
+        "BISMARK_METHYLATION_EXTRACTOR": "bismark_methylation_extractor",
+        "BOWTIE2": "bowtie2",
+        "CUTADAPT": "cutadapt",
+        "DEDUPLICATE_BISMARK": "deduplicate_bismark",
+        "FASTQC": "fastqc",
+        "R_DECONV": "BSseq_deconv.R",
+        "SAMTOOLS": "samtools",
+        "TRIMGALORE": "trim_galore"
     },
-   "genomedat":  {
-       "VERSION"    : "hg19"
-             },
-    "progs": {
-        "FASTQC"          : "fastqc",
-        "TRIMGALORE"      : "trim_galore",
-        "CUTADAPT"        : "cutadapt",
-        "BOWTIE2"         : "bowtie2" ,
-        "BISMARK"         : "bismark",
-        "DEDUPLICATE"         : "deduplicate_bismark",
-        "BOWTIE2"             : "bowtie2" ,
-        "DEDUPLICATE_BISMARK" : "deduplicate_bismark",
-        "BISMARK_GENOME_PREPARATION"     : "bismark_genome_preparation",
-        "BISMARK_METHYLATION_EXTRACTOR"  : "bismark_methylation_extractor",
-        "BISMARK2REPORT"                 : "bismark2report",
-        "SAMTOOLS"                       : "samtools"
-    }
+    "R_DECONV_PATH": "/home/bosberg/RDECONV_SCRIPTS/",
+    "SAMPLES": {
+        "immortal": {
+            "ReadType": "WGBS",
+            "SampleID": "immortal",
+            "Treatment": "B",
+            "fastq_ext": [
+                ".fq.gz"
+            ],
+            "fastq_name": [
+                "immortal_encode_ENCSR890UQO"
+            ],
+            "files": [
+                "immortal_encode_ENCSR890UQO.fq.gz"
+            ]
+        }
+    },
+    "bam_methCall_args_mincov": "4",
+    "bam_methCall_args_minqual": "10",
+    "bismark_args": " --multicore 8 -N 1 -L 2 ",
+    "fastqc_args": "",
+    "trim_galore_args": ""
 }
