--- a/pigx-bsseq.in
+++ b/pigx-bsseq.in
@@ -142,72 +142,6 @@ def bail(msg):
     print(msg, file=sys.stderr)
     exit(1)
 
-def get_filenames(mylist):
-    return list(map(lambda x: splitext_fqgz(x)[0], mylist))
-
-def splitext_fqgz(string):
-    def fq_suffix(filename):
-        return any(filename.endswith(ext) for ext in [".fq", ".fastq", ".fasta"])
-
-    def is_zipped(filename):
-        return any(filename.endswith(ext) for ext in [".gz", ".bz2"])
-
-    if is_zipped(string):
-        string, zipext = os.path.splitext(string)
-    else:
-        zipext = ""
-    if fq_suffix(string):
-        base, ext = os.path.splitext(string)
-        return (base, ext + zipext)
-    else:
-        bail("Input files are not fastq files!")
-
-def parse_samples(lines):
-    """
-    Parse csv table with information about samples, eg:
-    
-    Read1,Read2,SampleID,ReadType,Treatment
-    sampleB.pe1.fq.gz,sampleB.pe2.fq.gz,sampleB,WGBS,B,,
-    pe1.single.fq.gz,,sampleB1,WGBS,B,,
-    
-    It returns a dictionary required for the config file.
-    """
-    sreader = csv.reader(lines, delimiter=',')
-    all_rows = [row for row in sreader if row]
-  
-    header = list(map(lambda x: x.strip(), all_rows[0] ))
-    rows   = all_rows[1:]
-    minimal_header = ['Read1', 'Read2', 'SampleID', 'Protocol', 'Treatment']
-  
-    if header[:5] != minimal_header:
-        raise Exception("First columns of the input table have to be " +
-                        ",".join(minimal_header) + ".")
-
-    sample_ids = [x[2] for x in rows]
-    if len(set(sample_ids)) != len(sample_ids):
-        raise Exception("Column 'SampleID' has non-unique values.")
-
-    # Create a dictionary with all params, keys are samples ids
-    outputdict = {}
-    for row in rows:
-        if ( len(row) != 5 ):
-            bail("Invalid row format in Samplesheet. Each row should have five columns.")
-        row = list(map(lambda x: x.strip(), row))
-        files = list(filter(None, row[0:2]))
-        if not files:
-            raise Exception("Each sample has to have an entry in at least one of the columns 'Read1' or 'Read2'.")
-
-        sampleid_dict = {}
-        for idx in range(len(header[2:])):
-            try:
-                sampleid_dict[header[2:][idx]] = row[2:][idx]
-            except IndexError:
-                raise Exception("Number of columns in row " + idx + " doesn't match number of elements in header.")
-
-        sampleid_dict['files']      = files
-        sampleid_dict['fastq_name'] = get_filenames(files)
-        outputdict[row[2]] = sampleid_dict
-    return { 'SAMPLES': outputdict }
 
 def generate_config(configfile, sample_sheet, settingsfile, dirs):
     """Generate a new configuration file CONFIGFILE using SAMPLESHEET and
@@ -231,16 +165,6 @@ settings.
         update_config(settings,yaml.safe_load(open(settingsfile, 'r')))
 
     settings['execution']['target'] = args.target
-
-    # Load parameters specific to samples
-    if not path.isfile(sample_sheet):
-        bail("ERROR: Failed to find sample sheet provided. No such file: " + sample_sheet)
-    with open(sample_sheet, 'r') as f:
-        lines = f.read().splitlines()
-    sample_params = parse_samples(lines)
-
-    # Create a config file
-    settings.update(sample_params)
     settings['locations'].update(dirs['locations'])
 
     # Resolve relative paths in the locations section
@@ -249,6 +173,9 @@ settings.
 
     for key in settings['locations']:
         settings['locations'][key] = path.normpath(path.join(here, root, settings['locations'][key]))
+
+    # Record the location of the sample sheet.
+    settings['locations']['sample-sheet'] = path.abspath(sample_sheet)
 
     # Write the config file
     with open(configfile, 'w') as outfile:
@@ -344,20 +271,6 @@ def prepare_links():
     except FileExistsError:
         pass
 
-    # Create file links
-    for sample in config['SAMPLES']:
-        flist = config['SAMPLES'][sample]['files']
-        single_end = len(flist) == 1
-
-        for idx, f in enumerate(flist):
-            if not f.endswith(".gz"):
-                # FIXME: Future versions should handle unzipped .fq or .bz2.
-                bail("Input files must be gzipped: %s." % f)
-
-            tag = "" if single_end else '_' + str(idx + 1)
-            linkname = config['SAMPLES'][sample]['SampleID'] + tag + ".fq.gz"
-            makelink(path.join(config['locations']['input-dir'], f),
-                     path.join(config['locations']['output-dir'], "pigx_work/input/", linkname))
 
 
     # Ensure that we use the configured Pandoc, pandoc-citeproc
