--- a/report_templates/index.Rmd.in
+++ b/report_templates/index.Rmd.in
@@ -73,7 +73,7 @@ knitr::opts_knit$set(progress = FALSE)
 ```{r chunk_eval_options}
 MethCall          <- params$MethCall
 Segmentation      <- params$Segmentation
-AnnotateSegments  <- params$AnnotateSegments
+Annotation  <- params$Annotation
 
 inBam <- params$inBam
 bigwigFile <- params$bigwigFile
@@ -84,16 +84,19 @@ scripts_dir  <- params$scripts_dir
 
 if(!MethCall) {
   Segmentation <- 
-  AnnotateSegments <- 
+  Annotation <- 
     FALSE
 }
 
-if(!Segmentation) AnnotateSegments <- FALSE
+if(!Segmentation) Annotation <- FALSE
+
+if(!file.exists(refGenes_bedfile)) {
+       Annotation <- FALSE
+}
 
 ```
 
-# Final Report {-}
-
+# Description
 
 PiGx BSseq is a data-processing pipeline for bisulfite experiments; it automates the analysis of raw single-end or paired-end fastq reads, including quality control, trimming and alignment. The software also provides post-mapping analysis, such as differential-methylation detection, methylation segmentation, and annotation of such detected regions. 
 It was first developed by the Akalin group at MDC in Berlin in 2017.
@@ -129,7 +132,7 @@ knitr::kable(basic_inputParams)
 ```
 
 ```{r MethCallHeader, results='asis', eval=MethCall} 
-cat('## Methylation Calling\n')
+cat('# Methylation Calling\n')
 cat('The following table(s) lists some of the basic parameters under which the pipeline calculations were performed as well as output files that may be of interest to the user for further analysis.')
 ```
 
@@ -181,7 +184,7 @@ knitr::kable(inputParams)
 ```
 
 ```{r MethCallDescription, results='asis', eval=MethCall} 
-cat('### Extract Methylation Calls \n')
+cat('## Extract Methylation Calls \n')
 
 cat('We first extract the methylation calls from the sequence alignment produced by the bisulfite mapper [Bismark](https://www.bioinformatics.babraham.ac.uk/projects/bismark/) [@krueger_bismark:_2011] using the `processBismarkAln()` function of [methylKit](https://bioconductor.org/packages/release/bioc/html/methylKit.html) [@methylKit2012] --a package for the  analysis of DNA methylation profiles. 
 We apply filters based on a minimum coverage of ',mincov,' and a mapping quality of at least ',minqual,', as indicated in the parameters table.\n')
@@ -209,7 +212,7 @@ cat('Here we show some simple statistics related to the distribution of methylat
 
 
 ```{r Segmentation, results='asis', eval=Segmentation} 
-cat('## Segmentation \n')
+cat('# Segmentation \n')
 ```
 
 ```{r Segmentation.eval_params, eval=Segmentation}
@@ -234,7 +237,7 @@ cat('For the present data set, however, there exist chromosomes that could not b
 if( methsegempty )
    {
    Segmentation         <- FALSE;
-   AnnotateSegments     <- FALSE;
+   Annotation     <- FALSE;
    }
 ```
 
@@ -246,7 +249,7 @@ if( methsegempty )
 ```
 
 ```{r SegmentationDescription, results='asis', eval= Segmentation } 
-cat('### Segmentation of Methylation Profile\n')
+cat('## Segmentation of Methylation Profile\n')
 
 cat('Segmentation of the methylation profile is done using the methSeg() function, where change-points in the genome-wide  signal are recorded and the genome is partitioned into regions between consecutive change-points. This approach is typically used in the detection of copy-number variation [@klambauer2012] but can be applied to methylome segmentation as well [@Wreczycka2017]. Here, the identified segments are further clustered based on their average methylation signal, using a mixture-modeling approach, which permits the detection of distinct regions inside the genome  [@Wreczycka2017].\n')
 ```
@@ -264,7 +267,7 @@ cat('For the given sample, there were insufficient segments detected to perform 
 ```
 
 ```{r SegmentationExport, results='asis', eval= Segmentation }
-cat('### Export to BED\n')
+cat('## Export to BED\n')
 
 cat('We export the above regions to a *BED* file, which can be loaded into any genome browser (such as [IGV](http://software.broadinstitute.org/software/igv/) or [UCSC](https://genome.ucsc.edu/) ) to allow for further analysis, annotation and visualisation.\n')
 
@@ -296,13 +299,14 @@ cat('The annotation of the identified regions with genomic features allows for a
 ```
 
 
-```{r AnnotateSegmentsDescription, results='asis',eval= AnnotateSegments }
+```{r AnnotationDescription, results='asis',eval= Annotation }
 
 cat('Pigx first searches for a reference gene set for the given genome assembly in the path specified in the settings file. Upon failure to find such a file in this location, Pigx allows the user to query the UCSC table browser directly to fetch the reference gene set using the [rtracklayer](http://bioconductor.org/packages/release/bioc/html/rtracklayer.html) Package [@rtracklayer2009], when the option `webfetch` (in the settings file) is set to `True` -or, equivalently, `yes`. When this option is set to `False` --or `no`--, and the reference gene files are not found, the corresponding sections are simply omitted from this report. 
 Upon acquiring the reference genes, we can determine different features (e.g. promoter, exon, intron)  intrinsic to each gene,  using the `readTranscriptFeatures()` function from [genomation](http://bioinformatics.mdc-berlin.de/genomation/) [@genomation2014] --likewise, for CpG islands and shores.\n')
 ```
 
 
+```{r Annotation.loadSegments, eval= Annotation }
 # now load segments 
 segments.gr <- readBed(file = methSegBed,
                       track.line = "auto")
@@ -314,16 +318,16 @@ annot.gene.list <- annotateWithGeneParts(target = segments.grl,
                                          intersect.chr = TRUE)
 ```
 
-```{r AnnotateSegments.text2, results='asis', eval= AnnotateSegments }
+```{r Annotation.text2, results='asis', eval= Annotation }
 cat('Here, we plot the average methylation per segment group and the overlap with gene features for the input reference gene set.\n')
 ```
 
-```{r AnnotateSegments.plot,  eval= AnnotateSegments }
+```{r Annotation.plot,  eval= Annotation }
 ## percentage of target features overlapping with annotation:
 ## (with promoter > exon > intron precedence)
 annot.gene.mat <- as.matrix(sapply(annot.gene.list, function(x) x@precedence))
 
-  par(mfrow=c(1,2))
+par(mfrow=c(1,2))
 boxplot(sapply(split(x = segments.gr,f = segments.gr$name),FUN = function(x) x$score),
         ylab = "Methylation (%)",
         xlab = "Segment")
@@ -337,7 +341,7 @@ legend("bottomright",legend = rownames(annot.gene.mat),fill = grey(seq.int(0,1,l
 ```
 
 
-```{r plot_methylation_near_TSSs, results='asis', eval = fetch_refgen_success }
+```{r plot_methylation_near_TSSs, results='asis', eval = Annotation }
 
 TSS_plotlength  <- as.integer(params$TSS_plotlength)
 ymin = 0
