[cleanup] move default test files into sample_data
- changed in default test settings file
- omit older tests/in/ folder

--- a/tests/settings.yaml
+++ b/tests/settings.yaml
@@ -1,7 +1,7 @@
 locations:
-  input-dir: in/
+  input-dir: sample_data/reads/
   output-dir: out/
-  genome-fasta: genome/sample.fasta
+  genome-fasta: sample_data/genome/sample.fasta
 
 general:
   assembly: hg19
@@ -16,8 +16,8 @@ general:
     cores: 1
     qvalue: 0.05
     annotation:
-      cpgIsland-bedfile: pigx_work/refGenome/cpgIslandExt.hg19.bed.gz 
-      refGenes-bedfile: pigx_work/refGenome/refGene.hg19.bed.gz
+      cpgIsland-bedfile: sample_data/genome/cpgIslandExt.hg19.bed.gz 
+      refGenes-bedfile: sample_data/genome/refGene.hg19.bed.gz
       webfetch:   no
 
 DManalyses:
