--- a/configure.ac
+++ b/configure.ac
@@ -104,9 +104,18 @@ AC_CONFIG_FILES([etc/settings.yaml
                  report_templates/diffmeth.Rmd
                  Makefile
                  qsub-template.sh])
+
+dnl configure test files
 AC_CONFIG_FILES([test.sh], [chmod +x test.sh])
 AC_CONFIG_FILES([tests/test_fastqc/test.sh], [chmod +x tests/test_fastqc/test.sh])
+AC_CONFIG_FILES([tests/test_trimmming/test.sh], [chmod +x tests/test_trimmming/test.sh])
 AC_CONFIG_FILES([tests/test_posttrim_QC/test.sh], [chmod +x tests/test_posttrim_QC/test.sh])
+AC_CONFIG_FILES([tests/test_mapping_bwameth/test.sh], [chmod +x tests/test_mapping_bwameth/test.sh])
+AC_CONFIG_FILES([tests/test_mapping_bismark/test.sh], [chmod +x tests/test_mapping_bismark/test.sh])
+
+
+
+dnl configure pigx executable
 AC_CONFIG_FILES([pigx-bsseq:pigx-common/common/pigx-runner.in], [chmod +x pigx-bsseq])
 
 AC_OUTPUT
