Run guix shell in separate step to declutter log
Signed-off-by: Alexander Blume <alex.gos90@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Build Environment
+        run: guix shell -D -f guix.scm
       - name: Bootstrap
         run: guix shell -D -f guix.scm -- ./bootstrap.sh
       - name: Configure
