github actions run guix install without pull
Signed-off-by: Alexander Blume <alex.gos90@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,9 @@ jobs:
           restore-keys: |
             guix-cache-
       - name: Install GNU Guix
-        uses: PromyLOPh/guix-install-action@v1.2.2
+        uses: PromyLOPh/guix-install-action@v1
+        with:
+          pullAfterInstall: false
       - name: Checkout
         uses: actions/checkout@v3
         with:
