--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,19 +10,35 @@ jobs:
     name: make distcheck
     runs-on: ubuntu-latest
     steps:
+      - name: Install GNU Guix
+        uses: PromyLOPh/guix-install-action@v1.3
+        with:
+          pullAfterInstall: false
+      - name: Describe Guix
+        run: echo "::set-output name=guix-commit::$(guix describe | grep commit | join -a1 -o1.2 - /dev/null)"
+        id: guix-commit
       - name: Guix cache
-        uses: actions/cache@v2
+        id: guix-cache
+        uses: actions/cache@v3
         with:
           path: ~/.cache/guix
-          key: guix-cache-${{ github.sha }}
-          restore-keys: |
-            guix-cache-
-      - name: Install GNU Guix
-        uses: PromyLOPh/guix-install-action@v1.2.2
+          key: guix-cache-${{ steps.guix-commit.outputs.guix-commit }}
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Build Guix environment
+        if: steps.guix-cache.outputs.cache-hit != 'true'
+        run:
+          guix archive --generate-key
+          guix environment -l guix.scm --root=env -- echo done
+          guix archive --export --recursive $(readlink -f env) > ~/.cache/guix/env
+          cp /etc/guix/signing-key.pub ~/.cache/guix/
+      - name: Import Guix environment
+        if: steps.guix-cache.outputs.cache-hit == 'true'
+        run:
+          guix archive --authorize < ~/.cache/guix/signing-key.pub
+          guix archive --import < ~/.cache/guix/env
       - name: Bootstrap
         run: guix shell -D -f guix.scm -- ./bootstrap.sh
       - name: Configure
