--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Import Guix environment
         if: steps.guix-cache.outputs.cache-hit == 'true'
         run: |
-          guix archive --authorize < ~/.cache/guix/signing-key.pub
-          guix archive --import < ~/.cache/guix/env
+          cat ~/.cache/guix/signing-key.pub | sudo guix archive --authorize
+          cat ~/.cache/guix/env | sudo guix archive --import
       - name: Bootstrap
         run: guix shell -D -f guix.scm -- ./bootstrap.sh
       - name: Configure
