settings.yaml.in: rename samblaster_markdup_sort to mergeMarkdupSort_bam
Signed-off-by: Alexander Blume <alex.gos90@gmail.com>

--- a/etc/settings.yaml.in
+++ b/etc/settings.yaml.in
@@ -96,7 +96,7 @@ execution:
     samtools_sort_bam:
       threads: 12
       memory: 12G
-    samblaster_markdup_sort:
+    mergeMarkdupSort_bam:
       threads: 12
       memory: 12G
     bwameth_align_trimmed:
