--- a/test.sh.in
+++ b/test.sh.in
@@ -13,7 +13,7 @@ export srcdir=$(@PYTHON@ -c 'import os,sys; print(os.path.realpath(sys.argv[1]))
 chmod -R +w ${srcdir}/tests
 
 ./pigx-bsseq -s ${srcdir}/tests/settings.yaml ${srcdir}/tests/sample_sheet.csv \
-    --printshellcmds --target={final-report-bwameth,final-report}
+    --printshellcmds
 
 for base in PEsample_wgbs_1_val_1_bt2 SEsample_se_bt2 SEsample_v2_se_bt2; do
     if ! test -f "${srcdir}/tests/out/Reports/sample_reports/${base}.sorted.deduped_cpg_methylKit_hg19_final.html"
@@ -27,6 +27,22 @@ for base in PEsample_wgbs SEsample SEsample_v2; do
     if ! test -f "${srcdir}/tests/out/Reports/sample_reports/${base}.deduped_CpG_methylDackel_hg19_final.html"
     then
         echo "ERROR: could not find bwameth report for ${base}"
+        exit 1
+    fi
+done
+
+for base in med1vsh2o multipleTreat withinGroup; do
+    if ! test -f "${srcdir}/tests/out/Reports/${base}/${base}_CpG_destranded_methylDackel.diffmeth-report.html"
+    then
+        echo "ERROR: could not find diffmeth report based on bismark for ${base}"
+        exit 1
+    fi
+done
+
+for base in med1vsh2o multipleTreat withinGroup; do
+    if ! test -f "${srcdir}/tests/out/Reports/${base}/${base}_CpG_destranded_methylDackel.diffmeth-report.html"
+    then
+        echo "ERROR: could not find diffmeth report based on bismark for ${base}"
         exit 1
     fi
 done
