export PICARDJAR during configuration
Signed-off-by: Alexander Blume <alex.gos90@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,9 @@ jobs:
       - name: Bootstrap
         run: guix shell -D -f guix.scm -- ./bootstrap.sh
       - name: Configure
-        run: guix shell -D -f guix.scm -- ./configure
+        run: | 
+          guix shell -D -f guix.scm -- \
+          export PICARDJAR=$GUIX_ENVIRONMENT/share/java/picard.jar ; ./configure
       - name: Build
         run: guix shell -D -f guix.scm -- make -j
       - name: Distcheck
