github actions: use absolute path to test-suite.log
Signed-off-by: Alexander Blume <alex.gos90@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,9 +64,11 @@ jobs:
         run: guix shell -D -f guix.scm -- make distcheck
       - name: Print Test Suite Log
         if: ${{ failure() }}
-        run: cat ./test-suite.log 
+        run: cat ${{ github.workspace }}/pigx_bsseq-${{ env.version }}/_build/sub/test-suite.log" 
       - name: Upload Test Suite Log
+        if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
+          # https://github.com/actions/upload-artifact#environment-variables-and-tilde-expansion
           name: test-suite.log
-          path: ./test-suite.log
+          path: ${{ github.workspace }}/pigx_bsseq-${{ env.version }}/_build/sub/test-suite.log
