--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Capture Version
+        run: |
+          cat VERSION
+          echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
       - name: Build Guix environment
         if: steps.guix-cache.outputs.cache-hit != 'true'
         run: |
