--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,12 +61,13 @@ jobs:
       - name: Build
         run: guix shell -D -f guix.scm -- make -j
       - name: Distcheck
+        id: distcheck
         run: guix shell -D -f guix.scm -- make distcheck
       - name: Print Test Suite Log
-        if: ${{ failure() }}
+        if: steps.distcheck.outcome == 'failure'
         run: cat ${{ github.workspace }}/pigx_bsseq-${{ env.version }}/_build/sub/test-suite.log 
       - name: Upload Test Suite Log
-        if: ${{ failure() }}
+        if: steps.distcheck.outcome == 'failure'
         uses: actions/upload-artifact@v2
         with:
           # https://github.com/actions/upload-artifact#environment-variables-and-tilde-expansion
